import("//gn/ExternalLibs.gni")

if(is_mac || is_linux){
    lib_name = "${external_lib_path}/libpng/build/libpng16.${static_lib_suffix}"
}
else {
    lib_name = "${external_lib_path}/libpng/build/libpng16.${static_lib_suffix}"
}

external_lib("libpng"){
    cmake_other_args = "-DZLIB_INCLUDE_DIR=\"" + rebase_path("//out/externals/zlib/include") + "\"" + " -DZLIB_LIBRARY=\"" + rebase_path("//out/externals/zlib/build/zlib.lib") + "\""
    conf = rebase_path("./code")
    outputs = [
       lib_name,
        "${external_lib_path}/libpng/build/pnglibconf.h"
    ]
    if(is_windows){
        outputs += [
            "${external_lib_path}/libpng/build/libpng16.dll"
        ]
    }
    public_deps = [
        "//external-libs/zlib"
    ]
    public_headers = [
        rebase_path("./code/png.h"),
        rebase_path("./code/pngconf.h"),
        rebase_path("${external_lib_path}/libpng/build/pnglibconf.h")
    ]
    export = rebase_path(lib_name)
}