import("//gn/ExternalLibs.gni")
import("//gn/ExternalExports.gni")

o =  "$root_out_dir/externals/libtiff/build"

if(is_linux || is_mac){
    lib_names = ["${o}/libtiff/${lib_prefix}tiff.5.${shared_lib_suffix}","${o}/libtiff/${lib_prefix}tiffxx.5.${shared_lib_suffix}"]
}
else {
    lib_names = ["${o}/libtiff/${lib_prefix}tiff.${shared_lib_suffix}","${o}/libtiff/${lib_prefix}tiffxx.${shared_lib_suffix}"]
}

external_lib("libtiff"){
    conf = rebase_path("./code")
    outputs = lib_names + [
        "${o}/libtiff/tiffconf.h"
    ]
    if(is_windows){
        outputs += [
            "${o}/libtiff/${lib_prefix}tiffxx.${static_lib_suffix}"
        ]
    }
    public_deps = [
        "//external-libs/zlib",
        "//external-libs/libjpeg-turbo"
    ]
    public_headers = [
        rebase_path("./code/libtiff/tiff.h"),
        rebase_path("${o}/libtiff/tiffconf.h"),
        rebase_path("./code/libtiff/tiffio.h"),
        rebase_path("./code/libtiff/tiffio.hxx"),
        rebase_path("./code/libtiff/tiffvers.h")
    ]
    if(is_linux || is_mac){
        export = "${o}/libtiff/${lib_prefix}tiffxx.5.${shared_lib_suffix}"
    }
    else {
        export = "${o}/libtiff/${lib_prefix}tiffxx.${static_lib_suffix}"
    }
}