import("//gn/ExternalLibs.gni")

o = "$root_out_dir/externals/openssl/build"

external_lib("openssl"){
    conf = rebase_path("./code")
    custom_conf = true
    conf_command = "perl Configure"
    custom_build = true
    if(is_windows){
        build_command = "nmake"
    }
    else {
        build_command = "make"
    }
    outputs = [
        "${o}/libssl-3-x64.dll",
        "${o}/libcrypto-3-x64.dll",
        "${o}/libcrypto.lib",
        "${o}/libssl.lib"
    ]
    copy_lib_inputs = [
        rebase_path("code/libssl-3-x64.dll"),
        rebase_path("code/libcrypto-3-x64.dll"),
        rebase_path("code/libcrypto.lib"),
        rebase_path("code/libssl.lib")
    ]
    copy_include_inputs = [
        rebase_path("code/include/openssl")
    ]
    copy_lib_dest = rebase_path("${o}/build")
    copy_include_dest = rebase_path("${o}/include")
    
    export = rebase_path("${o}/libcrypto.lib")
}