import("../../gn/ExternalLibs.gni")

o = "$external_lib_path/pcre2/build"
if(is_mac || is_linux) {
    lib_name = "${o}/${lib_prefix}pcre2-8.${static_lib_suffix}"
}
else {
    lib_name = "${o}/${lib_prefix}pcre2-8.${static_lib_suffix}"
}

external_lib("pcre2"){
    cmake_other_args = ""
    conf = rebase_path("./code/pcre2-10.36")
    outputs = [
        lib_name,
        "${o}/pcre2.h",
        "${o}/pcre2posix.h"
    ]
    public_headers = [
        rebase_path("${o}/pcre2.h"),
        rebase_path("./code/pcre2-10.36/src/pcre2posix.h")
    ]
    export = rebase_path(lib_name)
}

# pcre_version = "pcre2-10.36"

# external_lib_target("${lib_prefix}pcre2-8"){
#     sources = [
#         "code/pcre2-10.36/src/pcre2_auto_possess.c",
#         "code/pcre2-10.36/src/pcre2_compile.c",
#         "code/pcre2-10.36/src/pcre2_config.c",
#         "code/pcre2-10.36/src/pcre2_context.c",
#         "code/pcre2-10.36/src/pcre2_convert.c",
#         "code/pcre2-10.36/src/pcre2_dfa_match.c",
#         "code/pcre2-10.36/src/pcre2_dftables.c",
#         "code/pcre2-10.36/src/pcre2_error.c",
#         "code/pcre2-10.36/src/pcre2_extuni.c",
#         "code/pcre2-10.36/src/pcre2_fuzzsupport.c",
#         "code/pcre2-10.36/src/pcre2_jit_misc.c",
#         "code/pcre2-10.36/src/pcre2_jit_compile.c",
#         "code/pcre2-10.36/src/pcre2_jit_match.c",
#         "code/pcre2-10.36/src/pcre2_maketables.c",
#         "code/pcre2-10.36/src/pcre2_match.c",
#         "code/pcre2-10.36/src/pcre2_match_data.c",
#         "code/pcre2-10.36/src/pcre2_newline.c",
#         "code/pcre2-10.36/src/pcre2_ord2utf.c",
#         "code/pcre2-10.36/src/pcre2_pattern_info.c",
#         "code/pcre2-10.36/src/pcre2_printint.c",
#         "code/pcre2-10.36/src/pcre2_script_run.c",
#         "code/pcre2-10.36/src/pcre2_serialize.c",
      #   "code/pcre2-10.36/src/pcre2_string_utils.c",
      #   "code/pcre2-10.36/src/pcre2_study.c",
      #   "code/pcre2-10.36/src/pcre2_substitute.c",
      #   "code/pcre2-10.36/src/pcre2_substring.c"
#         "code/pcre2-10.36/src/pcre2_tables.c",
#         "code/pcre2-10.36/src/pcre2_ucd.c",
#         "code/pcre2-10.36/src/pcre2_valid_utf.c",
#         "code/pcre2-10.36/src/pcre2_xclass.c",
#         "code/pcre2-10.36/src/pcre2posix.c"
#     ]
# }

# external_dep(){

# }
