import("../../gn/ExternalLibs.gni")
import("../../gn/ExternalExports.gni")

o = "$root_out_dir/externals/zlib/build"

if(is_mac || is_linux) {
    lib_name = "${o}/libz.1.2.11.${shared_lib_suffix}"
}
else if(is_windows){
    lib_name = "${o}/zlib.${shared_lib_suffix}"
}

external_lib("zlib"){
    cmake_other_args = ""
    conf = rebase_path("./code")
    outputs = [
        lib_name,
        "${o}/zconf.h"  
    ]
    if(is_windows){
        outputs += [
            "${o}/zlib.${static_lib_suffix}"
        ]
    }
    public_headers = [
        rebase_path("./code/zlib.h"),
        rebase_path("${o}/zconf.h")
    ]
    if(is_linux || is_mac){
        export = rebase_path(lib_name)
    }
    else {
        export = rebase_path("${o}/zlib.${static_lib_suffix}")
    }
}